[gd_scene load_steps=8 format=3 uid="uid://b5o0bui23t30x"]

[ext_resource type="Script" path="res://prefab/hud/gamehud.gd" id="1_y0tva"]
[ext_resource type="FontFile" uid="uid://c8xkf4haihbf1" path="res://assets/Space_Mono/SpaceMono-Regular.ttf" id="2_aoai5"]
[ext_resource type="Texture2D" uid="uid://bhmc6m5m36wo5" path="res://prefab/ship/bubbleparticle.png" id="3_inh6f"]
[ext_resource type="FontFile" uid="uid://bbsobcv6b2fd" path="res://assets/Space_Mono/SpaceMono-Bold.ttf" id="4_i4l85"]
[ext_resource type="Script" path="res://prefab/planet/health_bar.gd" id="4_o5j7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ve7r"]
bg_color = Color(0.768627, 0.509804, 0.631373, 0.423529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbbke"]
bg_color = Color(0.0859444, 0.308437, 0.0831972, 1)

[node name="Gamehud" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0tva")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 339.0
offset_bottom = 53.0
theme_override_constants/separation = 10

[node name="Day Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aoai5")
theme_override_font_sizes/font_size = 35
text = "DAY 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 0.835294, 0.407843, 1)
theme_override_colors/font_pressed_color = Color(0.388235, 0.662745, 0.45098, 1)
theme_override_colors/font_color = Color(0.984314, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_aoai5")
theme_override_font_sizes/font_size = 30
text = "Done Probing"

[node name="TimerLabel" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.388235, 0.662745, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_aoai5")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_inh6f")

[node name="resourcelabel" type="Label" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "9"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 478.0
offset_top = 11.0
offset_right = 883.0
offset_bottom = 51.0
tooltip_text = "Planet Health"
theme_override_font_sizes/font_size = 29
theme_override_styles/background = SubResource("StyleBoxFlat_8ve7r")
theme_override_styles/fill = SubResource("StyleBoxFlat_bbbke")
script = ExtResource("4_o5j7h")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MeteroidCount" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 81.0
offset_right = 350.0
offset_bottom = 119.0
text = "Meteoroids approaching: 0"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 513.0
offset_top = 133.0
offset_right = 684.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(0.388235, 0.662745, 0.45098, 1)
theme_override_fonts/font = ExtResource("4_i4l85")
theme_override_font_sizes/font_size = 35
text = "SHIELDED"

[node name="ShieldedTimer" type="Timer" parent="Label"]
wait_time = 2.0

[node name="LoseLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 404.0
offset_top = 129.0
offset_right = 768.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(1, 0.364301, 0.32925, 1)
theme_override_fonts/font = ExtResource("4_i4l85")
theme_override_font_sizes/font_size = 35
text = "wE aRe aLL dOomED"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Label/ShieldedTimer" to="." method="_on_shieldedtimer_timeout"]
